frontend/test/should_fail/defYield_004.grg
using defYield;

test t
{
	pp:p(--- yield x);
---
	def x:B;
}

pattern p(--- def x:B)
{
	y:A;
---
	yield { yield x = y; }
}

